Belajar yang bener

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
             aoooooo
             gabut bet asli
         </p>
+        <h1>
+            BELAJAR YANG BENER!!!
+        </h1>
     </body>
 </html>
