hapus praktikum index.html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
             halooo, aku popy :)
             <br>
             apa kabar?? capek yaa kuliah daring :v
-        </p>
-        <h1>
-            BELAJAR YANG BENER!!!
-        </h1>
-        <p>Ini Praktikum RPL tengah malem</p>
+            <br>
+            tapi video mas sabil lucu bet sumpah wkwk
+            aoooooo
+            gabut bet asli
     </body>
 </html>
