--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
             tapi video mas sabil lucu bet sumpah wkwk
             aoooooo
             gabut bet asli
+        </p>
+        <h1>
+            BELAJAR YANG BENER!!!
+        </h1>
     </body>
 </html>
