add table index.html

--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
         <h1>
             BELAJAR YANG BENER!!!
         </h1>
+        <table>
+            <tr>
+                <td>TABEL 1</td>
+            </tr>
+        </table>
     </body>
 </html>
